History
-------

xx/xx/2007  *** v2.21 ***

            - Empty attributes are now ignored (e.g. sha1="")
            - Removed cloneof, romof and sampleof fixes from datutil -i
            - DatUtil -i, -I and -p now default the output format to CMPro
              (in addition to -g, -G and -r which already behave like that)

01/01/2007  *** v2.20 ***

            - Added 'prune' feature for removing roms, disk and/or samples
            - Added 'incorporate' feature to assist in combining datafiles

30/12/2006  *** v2.19 ***

            - Internal change that only affects MAMEDiff (see note below)
            - Improved -dX modes (understands merging despite differing names) 

17/10/2006  *** v2.18 ***

            - More intelligent DTD creation when saving in ListXML format
            - Added support for game/display (MAME v0.107)
            - Added support for game/input/control (MAME v0.107)
            - Added support for emulator/build (MAME+MESS v0.101u4 upwards)
            - Added support for driver/savestate (MAME v0.101u1 upwards)
            - Note: The above changes affect the tab delimited format!

16/07/2006  *** v2.17 ***

            - Fixed bug that caused the DatUtil -g and -r options to crash

11/07/2006  *** v2.16 ***

            - Fixed bug that messed up internal indices (affected crc matching)
            - More intelligent directory scanner (regarding samples and CHDs)
            - Removed 64MB file limit from directory scanner (reads 1MB blocks)

13/01/2006  *** v2.15 ***

            - Last release would not load data files less than 4KB in size!

12/01/2006  *** v2.14 ***

            - Added a save-only format to imitate MAME's gamelist.txt file.
            - File identification is now done by loading just the first 4KB.

06/12/2005  *** v2.13 ***

            - DatLib v2.12 broke the RomCenter drivers (now fixed).

05/12/2005  *** v2.12 ***

            - Fixed a rare crash (if the longest line in the dat was the last).